<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLoginAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/str_login_your_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/str_username"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/tvLoginAccount" />


            <EditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/rectangle_edit"
                android:drawableStart="@drawable/baseline_perm_identity_24"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/str_username"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/str_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/edtEmailAddress" />


            <RelativeLayout
                android:id="@+id/rrpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/tvPassword">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/rectangle_edit"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />


                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/ic_password_hide" />

            </RelativeLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvForogtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/str_forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rrpassword" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/rectangle_button"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="@dimen/_40sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/str_login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForogtPassword" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLogin">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/str_dont_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/str_register"
                    android:textColor="@color/pinkcolor"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <ProgressBar
            android:id="@+id/pbLoadData"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:theme="@style/CircularProgress"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>