<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignupActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/str_create_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/llTop"
                app:layout_constraintTop_toBottomOf="@id/tvCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/str_firstname"/>

                    <EditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/rectangle_edit"
                        android:drawableStart="@drawable/baseline_perm_identity_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/str_firstname"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:maxLength="50"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/str_last_name"/>

                    <EditText
                        android:maxLength="50"
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/rectangle_edit"
                        android:drawableStart="@drawable/baseline_perm_identity_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/str_last_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"/>


                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/str_username"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/llTop" />


            <EditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/rectangle_edit"
                android:drawableStart="@drawable/baseline_perm_identity_24"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/str_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="100"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/str_phone_number"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/edtEmailAddress" />


            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/rectangle_edit"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/str_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="10"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber" />



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/str_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber" />


            <RelativeLayout
                android:id="@+id/rrpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/tvPassword">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/rectangle_edit"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />


                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/ic_password_hide" />

            </RelativeLayout>




            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/str_confirm_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/rrpassword" />


            <RelativeLayout
                android:id="@+id/rrConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/rectangle_edit"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />


                <ImageView
                    android:id="@+id/ivConfirmPasswordImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/ic_password_hide" />

            </RelativeLayout>




            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/rectangle_button"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="@dimen/_40sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/str_register"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rrConfirmPassword" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignup">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_you_have_already_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:text="@string/str_login"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/pinkcolor"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pbLoadData"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:theme="@style/CircularProgress"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>